otherProjectK8s/base/shared/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: risk-answers-mongodb
spec:
  serviceName: risk-answers-mongodb
  replicas: 1
  selector:
    matchLabels:
      app: risk-answers-mongodb
  template:
    metadata:
      labels:
        app: risk-answers-mongodb
    spec:
      containers:
        - name: risk-answers-mongodb
          image: mongo
          volumeMounts:
            - name: risk-answers-mongo-persistent-storage
              mountPath: /data/db
            - name: risk-answers-mongo-init-volume
              mountPath: /docker-entrypoint-initdb.d # when a container is started for the first time (db has not been initialized), it will execute files with
                                                     #  a .js extension in the /docker-entrypoint-initdb.d directory. Once the db has been initialized, these
                                                     #  scripts will not be executed again. They won't be executed on subsequent applies of this yaml.
      volumes:
        - name: risk-answers-mongo-persistent-storage
          persistentVolumeClaim:
            claimName: risk-answers-mongo-pvc
        - name: risk-answers-mongo-init-volume
          configMap:
            name: risk-answers-mongo-init-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: risk-answers-mongodb-svc
spec:
  type: ClusterIP
  selector:
    app: risk-answers-mongodb
  ports:
    - name: db-port
      protocol: TCP
      port: 27017
      targetPort: 27017
